Refactor Code in CreateTable, CreateTableAsSelect