@@ -32,7 +32,6 @@ import com.facebook.presto.spi.type.Type;
 import com.facebook.presto.spi.type.TypeManager;
 import com.google.common.base.Function;
 import com.google.common.base.StandardSystemProperty;
-import com.google.common.collect.FluentIterable;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import io.airlift.log.Logger;
@@ -74,6 +73,7 @@ import static com.google.common.base.Strings.isNullOrEmpty;
 import static com.google.common.collect.Iterables.concat;
 import static com.google.common.collect.Iterables.transform;
 import static java.lang.String.format;
+import static java.util.stream.Collectors.toList;
 import static java.util.UUID.randomUUID;
 import static org.apache.hadoop.hive.serde.serdeConstants.STRING_TYPE_NAME;
 
@@ -309,58 +309,33 @@ public class HiveMetadata
 
         checkArgument(!isNullOrEmpty(tableMetadata.getOwner()), "Table owner is null or empty");
 
-        String schemaName = tableMetadata.getTable().getSchemaName();
-        String tableName = tableMetadata.getTable().getTableName();
+        SchemaTableName schemaTableName = tableMetadata.getTable();
+        String schemaName = schemaTableName.getSchemaName();
+        String tableName = schemaTableName.getTableName();
 
-        ImmutableList.Builder<String> columnNames = ImmutableList.builder();
-        ImmutableList.Builder<Type> columnTypes = ImmutableList.builder();
-        for (ColumnMetadata column : tableMetadata.getColumns()) {
-            columnNames.add(column.getName());
-            columnTypes.add(column.getType());
-        }
-        List<String> types = FluentIterable.from(columnTypes.build())
-                .transform(HiveType::toHiveType)
-                .transform(HiveType::getHiveTypeName)
-                .toList();
+        ImmutableList.Builder<String> columnNamesBuilder = ImmutableList.builder();
+        ImmutableList.Builder<Type> columnTypesBuilder = ImmutableList.builder();
 
-        List<String> names = columnNames.build();
+        getColumnInfo(tableMetadata, columnNamesBuilder, columnTypesBuilder);
 
-        ImmutableList.Builder<FieldSchema> partitionKeys = ImmutableList.builder();
-        ImmutableList.Builder<FieldSchema> columns = ImmutableList.builder();
-        for (int i = 0; i < names.size(); i++) {
-            if (tableMetadata.getColumns().get(i).isPartitionKey()) {
-                partitionKeys.add(new FieldSchema(names.get(i), types.get(i), null));
-            }
-            else {
-                columns.add(new FieldSchema(names.get(i), types.get(i), null));
-            }
-        }
+        List<String> columnNames = columnNamesBuilder.build();
+        List<Type> columnTypes = columnTypesBuilder.build();
+
+        ImmutableList.Builder<FieldSchema> partitionKeysBuilder = ImmutableList.builder();
+        ImmutableList.Builder<FieldSchema> columnsBuilder = ImmutableList.builder();
+
+        buildColumns(columnNames, columnTypes, columnsBuilder, partitionKeysBuilder, tableMetadata);
+
+        Path targetPath = getTargetPath(schemaName, tableName, schemaTableName);
 
         SerDeInfo serdeInfo = new SerDeInfo();
         serdeInfo.setName(tableName);
         serdeInfo.setSerializationLib(this.hiveStorageFormat.getSerDe());
 
         StorageDescriptor sd = new StorageDescriptor();
-        String location = getDatabase(schemaName).getLocationUri();
-        if (isNullOrEmpty(location)) {
-            throw new RuntimeException(format("Database '%s' location is not set", schemaName));
-        }
-
-        Path databasePath = new Path(location);
-        if (!pathExists(databasePath)) {
-            throw new RuntimeException(format("Database '%s' location does not exist: %s", schemaName, databasePath));
-        }
-        if (!isDirectory(databasePath)) {
-            throw new RuntimeException(format("Database '%s' location is not a directory: %s", schemaName, databasePath));
-        }
-
-        Path targetPath = new Path(databasePath, tableName);
-        if (pathExists(targetPath)) {
-            throw new RuntimeException(format("Target directory for table '%s' already exists: %s", tableMetadata.getTable(), targetPath));
-        }
         sd.setLocation(targetPath.toString());
 
-        sd.setCols(columns.build());
+        sd.setCols(columnsBuilder.build());
         sd.setSerdeInfo(serdeInfo);
         sd.setInputFormat(this.hiveStorageFormat.getInputFormat());
         sd.setOutputFormat(this.hiveStorageFormat.getOutputFormat());
@@ -371,11 +346,8 @@ public class HiveMetadata
         table.setOwner(tableMetadata.getOwner());
         table.setTableType(TableType.MANAGED_TABLE.toString());
         String tableComment = "Created by Presto";
-        if (tableMetadata.isSampled()) {
-            tableComment = "Sampled table created by Presto. Only query this table from Hive if you understand how Presto implements sampling.";
-        }
         table.setParameters(ImmutableMap.of("comment", tableComment));
-        table.setPartitionKeys(partitionKeys.build());
+        table.setPartitionKeys(partitionKeysBuilder.build());
         table.setSd(sd);
 
         metastore.createTable(table);
@@ -415,35 +387,26 @@ public class HiveMetadata
         }
     }
 
-    @Override
-    public HiveOutputTableHandle beginCreateTable(ConnectorSession session, ConnectorTableMetadata tableMetadata)
+    private void getColumnInfo(ConnectorTableMetadata tableMetadata,
+                                ImmutableList.Builder<String> columnNamesBuilder,
+                                ImmutableList.Builder<Type> columnTypesBuilder)
     {
-        verifyJvmTimeZone();
-
-        checkArgument(!isNullOrEmpty(tableMetadata.getOwner()), "Table owner is null or empty");
-
-        HiveStorageFormat hiveStorageFormat = getHiveStorageFormat(session, this.hiveStorageFormat);
-
-        ImmutableList.Builder<String> columnNames = ImmutableList.builder();
-        ImmutableList.Builder<Type> columnTypes = ImmutableList.builder();
         for (ColumnMetadata column : tableMetadata.getColumns()) {
             // TODO: also verify that the OutputFormat supports the type
             if (!HiveRecordSink.isTypeSupported(column.getType())) {
                 throw new PrestoException(NOT_SUPPORTED, format("Cannot create table with unsupported type: %s", column.getType().getDisplayName()));
             }
-            columnNames.add(column.getName());
-            columnTypes.add(column.getType());
+            columnNamesBuilder.add(column.getName());
+            columnTypesBuilder.add(column.getType());
         }
         if (tableMetadata.isSampled()) {
-            columnNames.add(SAMPLE_WEIGHT_COLUMN_NAME);
-            columnTypes.add(BIGINT);
+            columnNamesBuilder.add(SAMPLE_WEIGHT_COLUMN_NAME);
+            columnTypesBuilder.add(BIGINT);
         }
+    }
 
-        // get the root directory for the database
-        SchemaTableName table = tableMetadata.getTable();
-        String schemaName = table.getSchemaName();
-        String tableName = table.getTableName();
-
+    private Path getTargetPath(String schemaName, String tableName, SchemaTableName schemaTableName)
+    {
         String location = getDatabase(schemaName).getLocationUri();
         if (isNullOrEmpty(location)) {
             throw new RuntimeException(format("Database '%s' location is not set", schemaName));
@@ -460,16 +423,57 @@ public class HiveMetadata
         // verify the target directory for the table
         Path targetPath = new Path(databasePath, tableName);
         if (pathExists(targetPath)) {
-            throw new RuntimeException(format("Target directory for table '%s' already exists: %s", table, targetPath));
+            throw new RuntimeException(format("Target directory for table '%s' already exists: %s", schemaTableName, targetPath));
         }
+        return targetPath;
+    }
+
+    private void buildColumns(List<String> columnNames,
+                                List<Type> columnTypes,
+                                ImmutableList.Builder<FieldSchema> columnsBuilder,
+                                ImmutableList.Builder<FieldSchema> partitionKeysBuilder,
+                                ConnectorTableMetadata tableMetadata)
+    {
+        List<String> types = columnTypes.stream()
+                .map(HiveType::toHiveType).map(HiveType::getHiveTypeName).collect(toList());
+        for (int i = 0; i < columnNames.size(); i++) {
+            if (tableMetadata.getColumns().get(i).isPartitionKey()) {
+                partitionKeysBuilder.add(new FieldSchema(columnNames.get(i), types.get(i), null));
+            }
+            else {
+                columnsBuilder.add(new FieldSchema(columnNames.get(i), types.get(i), null));
+            }
+        }
+    }
+
+    @Override
+    public HiveOutputTableHandle beginCreateTable(ConnectorSession session, ConnectorTableMetadata tableMetadata)
+    {
+        verifyJvmTimeZone();
+
+        checkArgument(!isNullOrEmpty(tableMetadata.getOwner()), "Table owner is null or empty");
+
+        HiveStorageFormat hiveStorageFormat = getHiveStorageFormat(session, this.hiveStorageFormat);
+
+        ImmutableList.Builder<String> columnNamesBuilder = ImmutableList.builder();
+        ImmutableList.Builder<Type> columnTypesBuilder = ImmutableList.builder();
+
+        // get the root directory for the database
+        SchemaTableName schemaTableName = tableMetadata.getTable();
+        String schemaName = schemaTableName.getSchemaName();
+        String tableName = schemaTableName.getTableName();
+
+        getColumnInfo(tableMetadata, columnNamesBuilder, columnTypesBuilder);
+
+        Path targetPath = getTargetPath(schemaName, tableName, schemaTableName);
 
         if (!useTemporaryDirectory(targetPath)) {
             return new HiveOutputTableHandle(
                     connectorId,
                     schemaName,
                     tableName,
-                    columnNames.build(),
-                    columnTypes.build(),
+                    columnNamesBuilder.build(),
+                    columnTypesBuilder.build(),
                     tableMetadata.getOwner(),
                     targetPath.toString(),
                     targetPath.toString(),
@@ -490,8 +494,8 @@ public class HiveMetadata
                 connectorId,
                 schemaName,
                 tableName,
-                columnNames.build(),
-                columnTypes.build(),
+                columnNamesBuilder.build(),
+                columnTypesBuilder.build(),
                 tableMetadata.getOwner(),
                 targetPath.toString(),
                 temporaryPath.toString(),
@@ -518,22 +522,20 @@ public class HiveMetadata
         }
 
         // create the table in the metastore
-        List<String> types = FluentIterable.from(handle.getColumnTypes())
-                .transform(HiveType::toHiveType)
-                .transform(HiveType::getHiveTypeName)
-                .toList();
+        List<String> types = handle.getColumnTypes().stream()
+                .map(HiveType::toHiveType).map(HiveType::getHiveTypeName).collect(toList());
 
         boolean sampled = false;
-        ImmutableList.Builder<FieldSchema> columns = ImmutableList.builder();
+        ImmutableList.Builder<FieldSchema> columnsBuilder = ImmutableList.builder();
         for (int i = 0; i < handle.getColumnNames().size(); i++) {
             String name = handle.getColumnNames().get(i);
             String type = types.get(i);
             if (name.equals(SAMPLE_WEIGHT_COLUMN_NAME)) {
-                columns.add(new FieldSchema(name, type, "Presto sample weight column"));
+                columnsBuilder.add(new FieldSchema(name, type, "Presto sample weight column"));
                 sampled = true;
             }
             else {
-                columns.add(new FieldSchema(name, type, null));
+                columnsBuilder.add(new FieldSchema(name, type, null));
             }
         }
 
@@ -546,7 +548,7 @@ public class HiveMetadata
 
         StorageDescriptor sd = new StorageDescriptor();
         sd.setLocation(targetPath.toString());
-        sd.setCols(columns.build());
+        sd.setCols(columnsBuilder.build());
         sd.setSerdeInfo(serdeInfo);
         sd.setInputFormat(hiveStorageFormat.getInputFormat());
         sd.setOutputFormat(hiveStorageFormat.getOutputFormat());
